Feat(be): Add wifi station connect endpoint (#176)
* Feat(be): Add wifi station connect endpoint

* Feat(be): Add mode to wifi settings
